[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
rocket_cors = "0.5.2"
serde = "1.0.145"
tokio = "1.21"
postgrest = "1.0"

postgres = "0.19"
rand = "0.8.5"
